for some reason i didn't see the 'id' fields in the contacts entries until now, updating code accordingly, but i'm committing so that i have my attribute-based stuff that used link tags for future reference

--- a/stax/src/main/webapp/index.html
+++ b/stax/src/main/webapp/index.html
@@ -4,7 +4,7 @@
 	</lift:Util.out> 
 	<lift:Util.in> 
 		<lift:Util.needsCp> 
-			<a href="/cl/oauth_start">Authenticate with Google!</a>
+			<a href="/cp/oauth_start">Authenticate with Google!</a>
 		</lift:Util.needsCp>
 		<lift:Util.hasCp> 
 			<lift:CL.name>Hi, <cl:name/></lift:CL.name>
