changed Context back to Group, renamed the scala.xml import conflict

--- a/stax/src/main/webapp/index.html
+++ b/stax/src/main/webapp/index.html
@@ -11,9 +11,9 @@
 			<div>
 				<h4>These are your groups:</h4>
 	   			<ol>
-					<lift:CL.listContexts> 
+					<lift:CL.listGroups> 
 		      			<li><cl:name/></li> 
-					</lift:CL.listContexts>
+					</lift:CL.listGroups>
 				</ol> 
 		 	</div>
 			<div>
