new refactored Identifier and Group models are now working as before, although Google contact fetching is slow. time to merge...

--- a/stax/src/main/webapp/index.html
+++ b/stax/src/main/webapp/index.html
@@ -35,9 +35,9 @@
 	   			<ol>
 					<lift:CL.listContacts> 
 		      			<li><cl:name/>
-							<cl:emails><email:list><ul>
-								<li><e:address/></li> 
-							</ul></email:list></cl:emails>
+							<cl:identifiers><identifier:list><ul>
+								<li><i:value/></li> 
+							</ul></identifier:list></cl:identifiers>
 						</li> 
 					</lift:CL.listContacts>
 				</ol> 
