--- a/stax/src/main/webapp/index.html
+++ b/stax/src/main/webapp/index.html
@@ -11,6 +11,36 @@
 		</lift:Util.hasGoogleService>
 		<br/>
 		
+		<lift:Util.needsTwitterService> 
+			<a href="/service/twitter_start">Authenticate with Twitter!</a>
+		</lift:Util.needsTwitterService>
+		<lift:Util.hasTwitterService> 
+			woo you have a twitter service!
+			<h3><lift:CL.name>Hi, <cl:name/></lift:CL.name></h3>
+			<div>
+				<h4>These are your groups:</h4>
+	   			<ol>
+					<lift:CL.listGroups> 
+		      			<li><cl:name/></li> 
+					</lift:CL.listGroups>
+				</ol> 
+		 	</div>
+			<div>
+				<h4>These are some of your contacts:</h4>
+	   			<ol>
+					<lift:CL.listContacts> 
+		      			<li><cl:name/>
+							<cl:identifiers><identifier:list><ul>
+								<li><i:value/></li> 
+							</ul></identifier:list></cl:identifiers>
+						</li> 
+					</lift:CL.listContacts>
+				</ol> 
+		 	</div>
+		</lift:Util.hasTwitterService>			
+		<br/>
+		
+		
 		<lift:Util.needsFoursquareService> 
 			<a href="/service/foursquare_start">Authenticate with Foursquare!</a>
 		</lift:Util.needsFoursquareService>
