--- a/stax/src/main/webapp/index.html
+++ b/stax/src/main/webapp/index.html
@@ -1,87 +1,13 @@
 <lift:surround with="default" at="content"> 
-	<lift:Util.out>Please 
-		<lift:menu.item name="Login">Log In</lift:menu.item> 
+	<lift:Util.out> 
+		<h2>wander the <a href="http://xkcd.com/256/">internet</a>, bring your <a href="http://www.facebook.com/home.php#/friends/">f</a><a href="http://twitter.com/following">r</a><a href="http://foursquare.com/manage_friends">i</a><a href="http://www.flickr.com/photos/friends/">e</a><a href="http://www.google.com/contacts">n</a><a href="http://www.linkedin.com/connections?trk=hb_side_cnts is">d</a><a href="https://github.com/">s</a></h2>
+		Please <lift:menu.item name="Login">Log In</lift:menu.item> 
 	</lift:Util.out> 
-	<lift:Util.in> 
-		<lift:Util.needsGoogleService> 
-			<a href="/service/google_start">Authenticate with Google!</a>
-		</lift:Util.needsGoogleService>
-		<lift:Util.hasGoogleService>
-			woo you have a google service!
-		</lift:Util.hasGoogleService>
+	<lift:Util.in>
+		<h3>Sample To Do List Application</h3>
+		<h4>(this is here just to demonstrate fancy ajaxy Lift stuff)</h4>
 		<br/>
-		
-		<lift:Util.needsTwitterService> 
-			<a href="/service/twitter_start">Authenticate with Twitter!</a>
-		</lift:Util.needsTwitterService>
-		<lift:Util.hasTwitterService> 
-			woo you have a twitter service!
-			<h3><lift:CL.name>Hi, <cl:name/></lift:CL.name></h3>
-			<div>
-				<h4>These are your groups:</h4>
-	   			<ol>
-					<lift:CL.listGroups> 
-		      			<li><cl:name/></li> 
-					</lift:CL.listGroups>
-				</ol> 
-		 	</div>
-			<div>
-				<h4>These are some of your contacts:</h4>
-	   			<ol>
-					<lift:CL.listContacts> 
-		      			<li><cl:name/>
-							<cl:identifiers><identifier:list><ul>
-								<li><i:value/></li> 
-							</ul></identifier:list></cl:identifiers>
-						</li> 
-					</lift:CL.listContacts>
-				</ol> 
-		 	</div>
-		</lift:Util.hasTwitterService>			
-		<br/>
-		
-		
-		<lift:Util.needsFoursquareService> 
-			<a href="/service/foursquare_start">Authenticate with Foursquare!</a>
-		</lift:Util.needsFoursquareService>
-		<lift:Util.hasFoursquareService> 
-			woo you have a foursquare service!
-			<h3><lift:CL.name>Hi, <cl:name/></lift:CL.name></h3>
-			<div>
-				<h4>These are your groups:</h4>
-	   			<ol>
-					<lift:CL.listGroups> 
-		      			<li><cl:name/></li> 
-					</lift:CL.listGroups>
-				</ol> 
-		 	</div>
-			<div>
-				<h4>These are some of your contacts:</h4>
-	   			<ol>
-					<lift:CL.listContacts> 
-		      			<li><cl:name/>
-							<cl:identifiers><identifier:list><ul>
-								<li><i:value/></li> 
-							</ul></identifier:list></cl:identifiers>
-						</li> 
-					</lift:CL.listContacts>
-				</ol> 
-		 	</div>
-		</lift:Util.hasFoursquareService>			
-		<br/>
-		
-		<lift:Util.needsHotpotatoService> 
-			<a href="/service/hotpotato_start">Authenticate with Hot Potato!</a>
-		</lift:Util.needsHotpotatoService>
-		<lift:Util.hasHotpotatoService> 
-			woo you have a hot potato service!
-		</lift:Util.hasHotpotatoService>
-		
-		
-		
-		<br/>
-		<br/>
-		<br/>
+	
 		<lift:TD.add form="post"> 
 			<table> 
 	   		<tr> 
