--- a/stax/src/main/webapp/contacts.html
+++ b/stax/src/main/webapp/contacts.html
@@ -1,36 +1,30 @@
-<lift:surround with="default" at="content"> 
-	<lift:Util.out> 
-		<h2>wander the <a href="http://xkcd.com/256/">internet</a>, bring your <a href="http://www.facebook.com/home.php#/friends/">f</a><a href="http://twitter.com/following">r</a><a href="http://foursquare.com/manage_friends">i</a><a href="http://www.flickr.com/photos/friends/">e</a><a href="http://www.google.com/contacts">n</a><a href="http://www.linkedin.com/connections?trk=hb_side_cnts is">d</a><a href="https://github.com/">s</a></h2>
-		Please <lift:menu.item name="Login">Log In</lift:menu.item> 
-	</lift:Util.out> 
-	<lift:Util.in>
-		<lift:Util.needsFoursquareService> 
-			<a href="/service/foursquare_start">Authenticate with Foursquare!</a>
-		</lift:Util.needsFoursquareService>
-		<lift:Util.hasFoursquareService> 
-			woo you have a foursquare service!
-			<h3><lift:CL.name>Hi, <cl:name/></lift:CL.name></h3>
-			<div>
-				<h4>These are your groups:</h4>
-				<ol>
-					<lift:CL.listGroups> 
-		      			<li><cl:name/></li> 
-					</lift:CL.listGroups>
-				</ol> 
-		 	</div>
-			<div>
-				<h4>These are some of your contacts:</h4>
-				<ol>
-					<lift:CL.listContacts> 
-		      			<li><cl:name/>
-							<cl:identifiers><identifier:list><ul>
-								<li><i:value/></li> 
-							</ul></identifier:list></cl:identifiers>
-						</li> 
-					</lift:CL.listContacts>
-				</ol> 
-		 	</div>
-		</lift:Util.hasFoursquareService>			
-	</lift:Util.in>
+<lift:surround with="login" at="content"> 
+	<lift:Util.needsFoursquareService> 
+		<a href="/service/foursquare_start">Authenticate with Foursquare!</a>
+	</lift:Util.needsFoursquareService>
+	<lift:Util.hasFoursquareService> 
+		woo you have a foursquare service!
+		<h3><lift:CL.name>Hi, <cl:name/></lift:CL.name></h3>
+		<div>
+			<h4>These are your groups:</h4>
+			<ol>
+				<lift:CL.listGroups> 
+	      			<li><cl:name/></li> 
+				</lift:CL.listGroups>
+			</ol> 
+	 	</div>
+		<div>
+			<h4>These are some of your contacts:</h4>
+			<ol>
+				<lift:CL.listContacts> 
+	      			<li><cl:name/>
+						<cl:identifiers><identifier:list><ul>
+							<li><i:value/></li> 
+						</ul></identifier:list></cl:identifiers>
+					</li> 
+				</lift:CL.listContacts>
+			</ol> 
+	 	</div>
+	</lift:Util.hasFoursquareService>
 </lift:surround>
 
