--- a/stax/src/main/webapp/groups.html
+++ b/stax/src/main/webapp/groups.html
@@ -1,9 +1,3 @@
-<lift:surround with="default" at="content"> 
-	<lift:Util.out> 
-		<h2>wander the <a href="http://xkcd.com/256/">internet</a>, bring your <a href="http://www.facebook.com/home.php#/friends/">f</a><a href="http://twitter.com/following">r</a><a href="http://foursquare.com/manage_friends">i</a><a href="http://www.flickr.com/photos/friends/">e</a><a href="http://www.google.com/contacts">n</a><a href="http://www.linkedin.com/connections?trk=hb_side_cnts is">d</a><a href="https://github.com/">s</a></h2>
-		Please <lift:menu.item name="Login">Log In</lift:menu.item> 
-	</lift:Util.out> 
-	<lift:Util.in>
-		groups!
-	</lift:Util.in>
+<lift:surround with="login" at="content"> 
+	groups!
 </lift:surround>
