--- a/stax/src/main/webapp/index.html
+++ b/stax/src/main/webapp/index.html
@@ -1,45 +1,39 @@
-<lift:surround with="default" at="content"> 
-	<lift:Util.out> 
-		<h2>wander the <a href="http://xkcd.com/256/">internet</a>, bring your <a href="http://www.facebook.com/home.php#/friends/">f</a><a href="http://twitter.com/following">r</a><a href="http://foursquare.com/manage_friends">i</a><a href="http://www.flickr.com/photos/friends/">e</a><a href="http://www.google.com/contacts">n</a><a href="http://www.linkedin.com/connections?trk=hb_side_cnts is">d</a><a href="https://github.com/">s</a></h2>
-		Please <lift:menu.item name="Login">Log In</lift:menu.item> 
-	</lift:Util.out> 
-	<lift:Util.in>
-		<h3>Sample To Do List Application</h3>
-		<h4>(this is here just to demonstrate fancy ajaxy Lift stuff)</h4>
-		<br/>
-	
-		<lift:TD.add form="post"> 
-			<table> 
-	   		<tr> 
-				<td>Description:</td> 
-				<td><todo:desc>To Do</todo:desc></td> 
-	    		</tr>
-	    		<tr> 
-	     		<td>Priority</td> 
-	     		<td><todo:priority><select><option>1</option></select></todo:priority></td> 
-	    		</tr> 
-	    		<tr> 
-	     		<td>&nbsp;</td> 
-	     		<td><todo:submit><button>New</button> </todo:submit></td> 
-	    		</tr> 
-	  		</table> 
-	 	</lift:TD.add> 
+<lift:surround with="login" at="content"> 
+	<h3>Sample To Do List Application</h3>
+	<h4>(this is here just to demonstrate fancy ajaxy Lift stuff)</h4>
+	<br/>
 
-		<lift:TD.list all_id="all_todos"> 
-		 <div id="all_todos"> 
-		   <div>Exclude done <todo:exclude/></div> 
-		   <ul> 
-		    <todo:list> 
-		      <li> 
-		       <todo:check><input type="checkbox"/></todo:check> 
-		       <todo:priority> 
-		         <select><option>1</option></select> 
-		       </todo:priority> 
-		       <todo:desc>To Do</todo:desc> 
-		      </li> 
-		    </todo:list> 
-		   </ul> 
-		 </div> 
-		</lift:TD.list>
-	</lift:Util.in>
+	<lift:TD.add form="post"> 
+		<table> 
+   		<tr> 
+			<td>Description:</td> 
+			<td><todo:desc>To Do</todo:desc></td> 
+    		</tr>
+    		<tr> 
+     		<td>Priority</td> 
+     		<td><todo:priority><select><option>1</option></select></todo:priority></td> 
+    		</tr> 
+    		<tr> 
+     		<td>&nbsp;</td> 
+     		<td><todo:submit><button>New</button> </todo:submit></td> 
+    		</tr> 
+  		</table> 
+ 	</lift:TD.add> 
+
+	<lift:TD.list all_id="all_todos"> 
+	 <div id="all_todos"> 
+	   <div>Exclude done <todo:exclude/></div> 
+	   <ul> 
+	    <todo:list> 
+	      <li> 
+	       <todo:check><input type="checkbox"/></todo:check> 
+	       <todo:priority> 
+	         <select><option>1</option></select> 
+	       </todo:priority> 
+	       <todo:desc>To Do</todo:desc> 
+	      </li> 
+	    </todo:list> 
+	   </ul> 
+	 </div> 
+	</lift:TD.list>
 </lift:surround>
