--- a/stax/src/main/webapp/accounts.html
+++ b/stax/src/main/webapp/accounts.html
@@ -1,3 +1,8 @@
 <lift:surround with="login" at="content"> 
-	accounts!
+	<h4>These are your authorized accounts:</h4>
+	<ol>
+		<lift:Accounts.listAccounts> 
+			<li><account:name/> (on <account:type/>)</li> 
+		</lift:Accounts.listAccounts>
+	</ol>
 </lift:surround>
