--- a/stax/src/main/webapp/accounts.html
+++ b/stax/src/main/webapp/accounts.html
@@ -1,8 +1,11 @@
 <lift:surround with="login" at="content"> 
 	<h4>These are your authorized accounts:</h4>
+	each of these will get more info about the account, as well as how many contacts it has
+	if the number of contacts is zero, it will have a link that will start the comet actor
+	that will fetch the contacts and update the page
 	<ol>
 		<lift:Accounts.listAccounts> 
-			<li><account:name/> (on <account:type/>)</li> 
+			<li><account:type/></li> 
 		</lift:Accounts.listAccounts>
 	</ol>
 </lift:surround>
