fancy ajax Account.notes updating working, next step is link on accounts page to fire off Actors to get contacts, and status for each account of how many contacts it has

--- a/stax/src/main/webapp/accounts.html
+++ b/stax/src/main/webapp/accounts.html
@@ -1,22 +1,27 @@
 <lift:surround with="login" at="content"> 
 	<h4>These are your authorized accounts:</h4>
-	each of these will get more info about the account, as well as how many contacts it has
-	if the number of contacts is zero, it will have a link that will start the comet actor
-	that will fetch the contacts and update the page
-	
-	<ol>
-		<lift:Accounts.listAccounts> 
-			<li>
-				<account:type/>
-				<account:identifiers>
-					<identifier:list>
-						<ul>
-							<li><ident:value/></li>
-						</ul>
-					</identifier:list>
-				</account:identifiers>
-				<account:notes/>
-			</li> 
-		</lift:Accounts.listAccounts>
-	</ol>
+	<p>
+		each of these will get more info about the account, as well as how many contacts it has
+		if the number of contacts is zero, it will have a link that will start the comet actor
+		that will fetch the contacts and update the page
+	</p>
+	<lift:Accounts.list all_id="all_accounts"> 
+		<div id="all_accounts"> 
+			<ol>
+				<account:list> 
+					<li>
+						<strong><account:type/></strong>
+						<account:identifiers>
+							<identifier:list>
+								<ul>
+									<li><ident:value/></li>
+								</ul>
+							</identifier:list>
+						</account:identifiers>
+						<account:notes>notes</account:notes>
+					</li> 
+				</account:list>
+			</ol>
+		 </div>
+	</lift:Accounts.list>
 </lift:surround>
