accounts page now has a button that fetches contacts, and then replaces itself with a comet-updaing clock. need to fix clock id's, but this is good progress towards fetching contacts

--- a/stax/src/main/webapp/accounts.html
+++ b/stax/src/main/webapp/accounts.html
@@ -14,6 +14,8 @@
 							</identifier:list>
 						</account:identifiers>
 						<em><account:notes>notes</account:notes></em>
+						<br/>
+						<account:fetch>fetch button</account:fetch>
 					</li> 
 				</account:list>
 			</ol>
