trying to get contact count updater to work with separate fetch and counter actors, grr.

--- a/stax/src/main/webapp/accounts.html
+++ b/stax/src/main/webapp/accounts.html
@@ -15,7 +15,7 @@
 						</account:identifiers>
 						<em><account:notes>notes</account:notes></em>
 						<br/>
-						<account:fetch>fetch button</account:fetch>
+						<account:status>button or number of contacts</account:status>
 					</li> 
 				</account:list>
 			</ol>
