--- a/stax/src/main/webapp/accounts.html
+++ b/stax/src/main/webapp/accounts.html
@@ -1,6 +1,7 @@
 <lift:surround with="login" at="content"> 
 	<h4>These are your authorized accounts:</h4>
 	<lift:Accounts.list all_id="all_accounts"> 
+    	<span id="testing">before</span>
 		<div id="all_accounts"> 
 			<ol>
 				<account:list> 
@@ -15,7 +16,8 @@
 						</account:identifiers>
 						<em><account:notes>notes</account:notes></em>
 						<br/>
-						<account:status>button or number of contacts</account:status>
+						<account:fetch>button to fetch contacts</account:fetch>
+						<account:status>status for contacts</account:status>
 					</li> 
 				</account:list>
 			</ol>
