--- a/stax/src/main/webapp/add.html
+++ b/stax/src/main/webapp/add.html
@@ -1,4 +1,4 @@
-<lift:surround with="login" at="content"> 
+<lift:surround with="default" at="content"> 
 	<h3>Add an Account</h3>
 	<p>
 		Here you can use OAuth to add accounts on various social web sites, and we'll fetch information about your friends/contacts on those services.
