contacts page working, displays identifiers and accounts for each contact when they are clicked. solve the embedding problem http://groups.google.com/group/liftweb/browse_thread/thread/894f74dbe4cb9609 using S.attr, which I'm not thrilled with but whatever

--- a/stax/src/main/webapp/contacts.html
+++ b/stax/src/main/webapp/contacts.html
@@ -2,9 +2,12 @@
 	<div>
 		<h4>These are your contacts:</h4>
 		<ol>
-			<lift:ContactList.listContacts> 
-      			<li><contact:name/></li> 
-			</lift:ContactList.listContacts>
+			<lift:ContactList.list> 
+      			<li>
+					<contact:name/>
+					<contact:info/>
+				</li> 
+			</lift:ContactList.list>
 		</ol> 
  	</div>
 </lift:surround>
