--- a/stax/src/main/webapp/templates-hidden/default.html
+++ b/stax/src/main/webapp/templates-hidden/default.html
@@ -11,42 +11,11 @@
         <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
         <script id="json" src="/classpath/json.js" type="text/javascript"/>
         <link rel="stylesheet" type="text/css" media="screen"  href="/style/main.css" />
-        <style>
-        	/* <![CDATA[ */
-        	.sidebar ul {
-        		margin:0;
-        		padding:0;
-        		border-bottom:1px solid #ccc;
-        	}
-        	.sidebar ul li {
-        		margin:0;
-        		padding:0;
-        		list-style:none;
-        		border:1px solid #ccc;
-        		border-bottom:none;
-        	}
-        	.sidebar ul li a {
-        		display:block;
-        		padding:3px;
-        		text-indent:30px;
-        		text-decoration:none;
-        	}
-        	.sidebar ul li span {
-        		display:block;
-        		padding:3px;
-        		text-indent:30px;
-        		text-decoration:none;
-        	}
-        	.sidebar ul li a:hover {
-        		background-color: #eee;
-        	}
-        	/* ]]> */
-        </style>
     </head>
     <body>
         <div class="container">
-            <div class="column span-12 last" style="text-align: right">
-                <h1 class="alt">Wanderli.st<img id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"/></h1>
+            <div class="column span-23 last" style="text-align: right">
+                <h1 class="headerfooter" id="heading">Wanderli.st<img id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"/></h1>
             </div>
             
             <hr/>
@@ -66,8 +35,8 @@
     
             <hr />
             <div class="column span-23 last" style="text-align: center">
-              	<h4 class="alt">
-                  	visit <a href="http://lehrblogger.com/category/wanderlist">http://lehrblogger.com/category/wanderlist</a> for more information
+              	<h4>
+                  	<a class="headerfooter" href="http://lehrblogger.com/category/wanderlist">http://lehrblogger.com/category/wanderlist</a>
     			</h4>
             </div>
         </div>
