now with online communities map favicon (will change later)

--- a/stax/src/main/webapp/templates-hidden/default.html
+++ b/stax/src/main/webapp/templates-hidden/default.html
@@ -10,6 +10,7 @@
         <lift:CSS.fancyType />
         <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
         <script id="json" src="/classpath/json.js" type="text/javascript"/>
+		<link rel="icon" type="image/vnd.microsoft.icon" href="/images/favicon.ico"/>
         <link rel="stylesheet" type="text/css" media="screen"  href="/style/main.css" />
     </head>
     <body>
