about to try moving the current count of objects directly into the cometactor, so it always has it

--- a/stax/src/main/webapp/accounts.html
+++ b/stax/src/main/webapp/accounts.html
@@ -13,8 +13,7 @@
 									</identifier:list>		
 							</account:identifiers>			
 						</ul>
-						<account:fetch>button to fetch contacts</account:fetch>
-						<account:status>status for contacts</account:status>
+						<account:fetch/> <account:status/>
 					</li> 
 				</accountList:list>
 			</ol>
